fix tos overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  overflow-y: hidden;
+  overflow-y: auto;
   position: relative;
   font-family: "Noto Sans SC", sans-serif;
 }
